--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -129,12 +129,13 @@
   <ItemGroup>
     <ClCompile Include="common.cpp" />
     <ClCompile Include="fast_FeatureDetection.cpp" />
-    <ClCompile Include="harris_featureDetection.cpp" />
+    <ClCompile Include="harris_FeatureDetection.cpp" />
     <ClCompile Include="imageOp.cpp" />
     <ClCompile Include="imgShow.cpp" />
+    <ClCompile Include="log_gabor_FeatureDetection.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="shift_FeatureDetection.cpp" />
-    <ClCompile Include="shi_tomasi_featureDetection.cpp" />
+    <ClCompile Include="shi_tomasi_FeatureDetection.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="surf_FeatureDetection.cpp" />
   </ItemGroup>
@@ -142,12 +143,13 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="fast_FeatureDetection.h" />
     <ClInclude Include="featureDetection.h" />
-    <ClInclude Include="harris_featureDetection.h" />
+    <ClInclude Include="harris_FeatureDetection.h" />
     <ClInclude Include="imageControl.h" />
     <ClInclude Include="imageOp.h" />
     <ClInclude Include="imgShow.h" />
+    <ClInclude Include="log_gabor_FeatureDetection.h" />
     <ClInclude Include="shift_FeatureDetection.h" />
-    <ClInclude Include="shi_tomasi_featureDetection.h" />
+    <ClInclude Include="shi_tomasi_FeatureDetection.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="surf_FeatureDetection.h" />
   </ItemGroup>
